--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="hi">
 <head>
@@ -63,7 +64,7 @@
   <!-- Header -->
   <header class="d-flex flex-column flex-md-row align-items-center px-3 py-3">
     <div class="me-md-3 mb-3 mb-md-0">
-      <img src="images/logo.png" alt="Jaiswal Samaj Logo" class="logo">
+      <img src="logo.png" alt="Jaiswal Samaj Logo" class="logo">
     </div>
     <div class="flex-grow-1 text-center text-white">
       <h1 class="m-0">अखिल भारतीय जायसवाल महासभा</h1>
@@ -89,7 +90,7 @@
       <!-- Rajkishore Modi -->
       <div class="col-md-4 col-sm-6">
         <div class="card text-center p-3 shadow-sm">
-          <img src="images/rajkishore-modi.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Rajkishore Modi">
+          <img src="rajkishore-modi.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Rajkishore Modi">
           <h5 class="mt-3">राजकिशोर मोदी</h5>
           <p class="text-muted">राष्ट्रीय अध्यक्ष</p>
           <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#rajkishore">
@@ -104,7 +105,7 @@
       <!-- Atal Kumar Gupta -->
       <div class="col-md-4 col-sm-6">
         <div class="card text-center p-3 shadow-sm">
-          <img src="images/leader2.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Atal Kumar Gupta">
+          <img src="leader2.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Atal Kumar Gupta">
           <h5 class="mt-3">अटल कुमार गुप्ता</h5>
           <p class="text-muted">राष्ट्रीय संयोजक</p>
           <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#atal">
@@ -119,7 +120,7 @@
       <!-- Dr. Shailendra Jaiswal -->
       <div class="col-md-4 col-sm-6">
         <div class="card text-center p-3 shadow-sm">
-          <img src="images/leader3.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Dr. Shailendra Jaiswal">
+          <img src="leader3.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Dr. Shailendra Jaiswal">
           <h5 class="mt-3">डॉ. शैलेन्द्र जायसवाल</h5>
           <p class="text-muted">राष्ट्रीय महामंत्री</p>
           <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#shailendra">
@@ -134,7 +135,7 @@
       <!-- Anupama Jaiswal -->
       <div class="col-md-4 col-sm-6">
         <div class="card text-center p-3 shadow-sm">
-          <img src="images/leader4.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Anupama Jaiswal">
+          <img src="leader4.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Anupama Jaiswal">
           <h5 class="mt-3">अनुपमा जायसवाल</h5>
           <p class="text-muted">राष्ट्रीय महिला अध्यक्ष, विधायक (उ.प्र.)</p>
           <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#anupama">
@@ -149,7 +150,7 @@
       <!-- Trilokinath Jaiswal -->
       <div class="col-md-4 col-sm-6">
         <div class="card text-center p-3 shadow-sm">
-          <img src="images/leader5.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Trilokinath Jaiswal">
+          <img src="leader5.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Trilokinath Jaiswal">
           <h5 class="mt-3">त्रिलोकिनाथ जायसवाल</h5>
           <p class="text-muted">राष्ट्रीय कोषाध्यक्ष</p>
           <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#trilokinath">
@@ -164,7 +165,7 @@
       <!-- Raja Chaudhary -->
       <div class="col-md-4 col-sm-6">
         <div class="card text-center p-3 shadow-sm">
-          <img src="images/leader6.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Raja Chaudhary">
+          <img src="leader6.jpg" class="rounded-circle mx-auto" width="120" height="120" alt="Raja Chaudhary">
           <h5 class="mt-3">राजा चौधरी</h5>
           <p class="text-muted">राष्ट्रीय युवा अध्यक्ष</p>
           <button class="btn btn-sm btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#raja">
@@ -186,7 +187,7 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
-          <img src="images/member1.jpg" alt="Member 1">
+          <img src="member1.jpg" alt="Member 1">
           <div class="carousel-caption d-none d-md-block">
             <h5>मा.ना. श्रीपाद येसो नाईक</h5>
             <p>मुख्य संरक्षक, केंद्रीय मंत्री</p>
@@ -194,7 +195,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="images/member2.jpg" alt="Member 2">
+          <img src="member2.jpg" alt="Member 2">
           <div class="carousel-caption d-none d-md-block">
             <h5>श्रीप्रकाश जायसवाल</h5>
             <p>मुख्य संरक्षक, प्रमुख केंद्रीय मंत्री</p>
@@ -243,13 +244,13 @@
     <h2>Photo Gallery</h2>
     <div class="row g-3 gallery">
       <div class="col-md-4 col-sm-6">
-        <img src="images/gallery1.jpg" class="img-fluid" alt="Gallery Image 1">
+        <img src="gallery1.jpg" class="img-fluid" alt="Gallery Image 1">
       </div>
       <div class="col-md-4 col-sm-6">
-        <img src="images/gallery2.jpg" class="img-fluid" alt="Gallery Image 2">
+        <img src="gallery2.jpg" class="img-fluid" alt="Gallery Image 2">
       </div>
       <div class="col-md-4 col-sm-6">
-        <img src="images/gallery3.jpg" class="img-fluid" alt="Gallery Image 3">
+        <img src="gallery3.jpg" class="img-fluid" alt="Gallery Image 3">
       </div>
     </div>
   </section>
